force-app/main/default/objects/KimbleOne__UIControl__c/KimbleOne__UIControl__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>UIControl</label>
    <nameField>
        <label>UIControl Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UIControls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>