force-app/main/default/objects/KimbleOne__UIControl__c/fields/KimbleOne__InputCheckbox__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InputCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Input Checkbox</label>
    <type>Checkbox</type>
</CustomField>