force-app/main/default/objects/KimbleOne__UIControl__c/fields/KimbleOne__InputCurrency__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InputCurrency__c</fullName>
    <label>InputCurrency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>