force-app/main/default/objects/KimbleOne__UIControl__c/fields/KimbleOne__InputDecimal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InputDecimal__c</fullName>
    <label>InputDecimal</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>