force-app/main/default/objects/KimbleOne__UIControl__c/fields/KimbleOne__SupplierAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UIControls</relationshipLabel>
    <relationshipName>UIControls</relationshipName>
    <type>Lookup</type>
</CustomField>